classes DAO criadas afim de representar o diagrama. Erros de conexão corrigidos e conexão modificada para atender o desenvolvimento em camadas.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=projetoaerolp2.ProjetoAeroLP2
+main.class=MainAero.ProjetoAeroLP2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
